# AutoCursor

./: .gitignore  README.md
docs/: PRD.md  Technical-Implementation.md  config.example.toml  development-steps.md  plan.md
inference/: Cargo.toml
inference/src/: config.rs
python/: requirements.txt
rust/: Cargo.toml
rust/inference_daemon/: Cargo.toml
rust/inference_daemon/src/: main.rs  model.rs  server.rs
