[package]
name = "inference_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onnxruntime = { version = "0.18", features = ["cuda"] } # Ensure CUDA feature matches your setup
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8" # Updated to a more recent version than plan/tech spec example
async-ipc = "0.1" # As mentioned in plan.md section 1
# Add other necessary crates like tracing/log later